src/objects/CBTransaction__c.object
<CustomObject>
    <fields>
        <fullName>CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>CBAccount__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBBudgetYear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Budget Year</label>
        <referenceTo>CBBudgetYear__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>CBDivision__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBKey__c</fullName>
        <label>CBKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Period</label>
        <referenceTo>CBPeriod__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CB_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>CBVariable1__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CBTransactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>CBVariable2__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CBTransactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>CBVariable3__c</referenceTo>
        <relationshipLabel>CB Transactions</relationshipLabel>
        <relationshipName>CBTransactions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>CB Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CBDivision__c</columns>
        <columns>CBAccount__c</columns>
        <columns>CBBudgetYear__c</columns>
        <columns>CBPeriod__c</columns>
        <columns>Value__c</columns>
        <columns>CBVariable1__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CBTransaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Transactions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>